objects/DandB_Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_Enquiry</relationshipLabel>
        <relationshipName>DandB_Enquiry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>accountTypeCode__c</fullName>
        <label>accountTypeCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountTypeDesc__c</fullName>
        <label>accountTypeDesc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditObligationCode__c</fullName>
        <label>creditObligationCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditObligationDesc__c</fullName>
        <label>creditObligationDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enqDay__c</fullName>
        <label>enqDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enqHour__c</fullName>
        <label>enqHour</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enqMinute__c</fullName>
        <label>enqMinute</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enqMonth__c</fullName>
        <label>enqMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enqSecond__c</fullName>
        <label>enqSecond</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enqYear__c</fullName>
        <label>enqYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation__c</fullName>
        <label>organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purpose__c</fullName>
        <label>purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueCustomerReference__c</fullName>
        <label>uniqueCustomerReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DandB_Enquiry</label>
    <nameField>
        <label>DandB_Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_Enquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>